Added log, clone, graph, rebase etc alias

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,13 +3,22 @@
   email = masudcsesust04@gmail.com
   signingkey = [GPG SIGNING KEY]
 [core]
-  editor = nvim
+  editor = vim
 [alias]
-  co = checkout
   br = branch
   ci = commit
+  cl = clone
+  co = checkout
+  lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+  lg = !"git lg1"
+  og = log --oneline --abbrev-commit --all --graph
+  rb = rebase
+  sl = stash list
+  sp = stash pop
   st = status
   last = log -1 HEAD
+[push]
+  default = current
 [filter "lfs"]
   process = git-lfs filter-process
   required = true
