Added aliase for push, pull

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,8 +13,12 @@
   lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
   lg = !"git lg1"
   lp = log --pretty=format:'%Cblue%h %Cred%cD %Creset%cn %Cgreen%s%Creset' --date-order --graph
+  ps = push
+  pl = pull
+  plm = pull origin master
   rb = rebase
   st = status
+  sh = stash
   sl = stash list
   sp = stash pop
   sa = stash apply
