Added alias symlink
- Added alias for development and release-candidate branch pull symlink

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,6 +16,8 @@
   ps = push
   pl = pull
   plm = pull origin master
+  pld = pull origin development
+  plr = pull origin releasee-candidate
   rb = rebase
   st = status
   sh = stash
